# set(SRCS 
# 	NetServer.cpp)
# 
# add_library(pursue_netserver ${SRCS})
# target_link_libraries(pursue_netserver 
# 	${BOOST_LIBS}
# 	lib_prusue_tools.a)
# 	
# install(TARGETS pursue_netserver DESTINATION ${LIBRARY_OUTPUT_PATH})
# 
# set(HEADERS 
# 	NetServer.h)
# 	
# install(FILES ${HEADERS} DESTINATION ${HEADER_OUTPUT_PATH}/pursue_netserver)

